refactor: Spring Security 및 예외 처리 구조 개선
- 인증되지 않은 경로에 대한 401 응답 처리 로직 개선
- 존재하지 않는 API 호출 시 404 응답 처리 추가 (GlobalExceptionHandler 적용)
- SecurityConfig에서 /error 경로 permit 처리 추가
- 인증 경로 범위 명확화 및 anyRequest permitAll 설정
- JWT 인증 진입점 및 접근 거부 예외 메시지 포맷 개선

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,5 +38,10 @@ app:
       -edc5qtr7602li3snf1gu46ibrl0m00v2.apps.googleusercontent.com;GOOGLE_CLIENT_PW=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;
         KAKAO_CLIENT_ID=8959f53fa61ecba9395167a6e04feb7a}                                                                                                                                                                                       
 
+server:
+  error:
+    whitelabel:
+      enabled: false
+    include-message: always
 
 
